tests/coverage/misc/fail/negative/regex_literals/004_duplicate_flags.js
// Expected error: malformed character class.
const r = /[abc/
